<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/logger">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="autosave"
            android:summary="@string/autosave_summary"
            android:title="@string/autosave" />

        <ListPreference
            android:defaultValue="V"
            android:entries="@array/level_entries"
            android:entryValues="@array/level_values"
            android:key="level"
            android:summary="@string/level_summary"
            android:title="@string/level" />

        <ListPreference
            android:defaultValue="BRIEF"
            android:entries="@array/format_entries"
            android:entryValues="@array/format_values"
            android:key="format"
            android:summary="@string/format_summary"
            android:title="@string/format" />

        <ListPreference
            android:defaultValue="MAIN"
            android:entries="@array/buffer_entries"
            android:entryValues="@array/buffer_values"
            android:key="buffer"
            android:summary="@string/buffer_summary"
            android:title="@string/buffer" />
    </PreferenceCategory>


</PreferenceScreen>